--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 questions. Fill out the form and we’ll be in touch as soon as possible.</p>
         </div>
 
-        <form class="contact__form" action="#">
+        <form class="contact__form" action="#" method="get">
             <label class="label" for="name">
                 <input id="name" type="text" placeholder="Your name" required>
             </label>
