--- a/index.html
+++ b/index.html
@@ -6,9 +6,352 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="assets/icon.jpg" rel="icon">
+    <title>Cards</title>
 </head>
 <body>
+
+<div class="cards-A wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="A">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="A">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="A">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="A">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-K wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="K">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="K">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="K">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="K">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-Q wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="Q">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="Q">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="Q">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="Q">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-J wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="J">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="J">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="J">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="J">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-10 wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face  flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="10">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="10">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="10">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="10">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-9 wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="9">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="9">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="9">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="9">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-8 wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="8">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="8">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="8">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="8">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-7 wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="7">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="7">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="7">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="7">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
+
+<div class="cards-6 wrapper">
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="6">
+                <span class="icon">&spades;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="6">
+                <span class="icon">&hearts;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back black" data-type="6">
+                <span class="icon">&clubs;</span>
+            </div>
+        </div>
+    </figure>
+
+    <figure class="flip-box">
+        <div class="flip">
+            <div class="flip__face flip__face--front"></div>
+            <div class="flip__face flip__face--back red" data-type="6">
+                <span class="icon">&diams;</span>
+            </div>
+        </div>
+    </figure>
+</div>
 
 </body>
 </html>
