--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <title>Document</title>
 </head>
 <body>
-
+<ul>
+    <li>Додавати новий HTML-код на сторінку, змінювати наявний вміст, змінювати стилі.</li>
+    <li>Реагувати на дії користувача, опрацьовувати натискання миші, переміщення вказівника, натискання на клавіші
+        клавіатури.
+    </li>
+    <li>Відправляти запити через мережу до віддалених серверів, завантажувати та відвантажувати файли (так звані
+        технології AJAX і COMET).
+    </li>
+    <li>Отримувати і надсилати куки, ставити запитання відвідувачам, показувати повідомлення.</li>
+    <li>Запам’ятовувати дані на стороні клієнта (“local storage”), які будуть доступні в майбутніх сесіях на цьому
+        вебсайті.
+    </li>
+</ul>
+<script src="script.js"></script>
 </body>
 </html>
