--- a/forLesson.html
+++ b/forLesson.html
@@ -8,6 +8,35 @@
     <title>Document</title>
 </head>
 <body>
+<header id="list" class="header">
+    <nav class="navigation wrapper">
+        <div  class="block block-two">
+            <ul name="some" class="nav-list">
+                <li class="nav-item">
+                    <a href="/product" target="_blank">Product</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/customers" target="_blank">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/pricing" target="_blank">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a href="/resources" target="_blank">Resources</a>
+                </li>
+            </ul>
+        </div>
+
+        <div class="block block-three">
+            <button class="btn sign-in">Sign In</button>
+            <button class="btn sign-up">Sign Up</button>
+        </div>
+    </nav>
+</header>
+<h1>це великий текст</h1>
+<h2>це менший текст</h2>
+<h3>це ще менший текст</h3>
+<h4>це маленький текст</h4>
 <script src="infoForLesson.js"></script>
 </body>
 </html>
