--- a/documentNav.html
+++ b/documentNav.html
@@ -12,13 +12,13 @@
     <nav class="navigation wrapper">
         <div  class="block block-two">
             <ul name="some" class="nav-list">
-                <li class="nav-item">
+                <li class="nav-item_blue">
                     <a href="/product" target="_blank">Product</a>
                 </li>
                 <li class="nav-item">
                     <a href="/customers" target="_blank">Customers</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item_red">
                     <a href="/pricing" target="_blank">Pricing</a>
                 </li>
                 <li class="nav-item">
@@ -37,6 +37,6 @@
 <h2>це менший текст</h2>
 <h3>це ще менший текст</h3>
 <h4>це маленький текст</h4>
-<script src="infoForLesson.js"></script>
+<script src="documentNavigation.js"></script>
 </body>
 </html>
