--- a/forLesson.html
+++ b/forLesson.html
@@ -5,9 +5,37 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+
+<div id="modalWindow" class="modal-window">
+    <div class="modal-content">
+        <div class="modal-content__header">
+            <h1 class="general-title">Survey</h1>
+        </div>
+        <div class="modal-content__body">
+            <p class="description">Do you want to learn Front-end development?</p>
+        </div>
+        <div class="modal-content__footer">
+<!--            // Використання атрибута HTML-->
+            <button type="button" class="button">Yes</button>
+            <button type="button" class="button">No</button>
+            <button type="button" class="button">Look out</button>
+            <button type="button" class="button">You're amazing</button>
+            <button type="button" class="btn">You're amazing</button>
+        </div>
+    </div>
+    <a class="link" href="https://www.google.com/">GOOGLE</a>
+</div>
+<div class="red"> red
+    <div class="blue"> blue
+        <div class="yellow"> yellow</div>
+    </div>
+</div>
+
+<div class="square block-for-mouse"></div>
 <script src="infoForLesson.js"></script>
 </body>
 </html>
