--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Document</title>
 </head>
 <body>
+<div class="grandparent">
+    <div class="parent">
+        <div class="child"></div>
+    </div>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
