--- a/index.html
+++ b/index.html
@@ -6,14 +6,68 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-<div class="grandparent">
-    <div class="parent">
-        <div class="child"></div>
-    </div>
+<body class="wrapper">
+<textarea class="area"></textarea>
+<div class="view"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper risus orci, et pretium
+    libero-->
+    interdum ut. Morbi placerat elit lacus, at ullamcorper mi sodales tempor. Cras gravida sollicitudin nulla
+    nec ultrices. Aliquam mollis est sed porttitor mattis. Suspendisse consequat pellentesque maximus. Morbi a
+    diam neque. Vestibulum vitae tellus in ipsum lacinia lacinia eget non nulla. Maecenas mattis ante porta,
+    pellentesque tellus non, imperdiet neque.
 </div>
+
+<table class="table table-sortable">
+    <thead>
+    <tr class="title">
+        <th class="name">Name</th>
+        <th class="age">Age</th>
+        <th class="country">Country</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+        <td>Anastasiya</td>
+        <td>26</td>
+        <td>Ukraine</td>
+    </tr>
+    <tr>
+        <td>Maria</td>
+        <td>23</td>
+        <td>USA</td>
+    </tr>
+    <tr>
+        <td>Francisco</td>
+        <td>43</td>
+        <td>Mexico</td>
+    </tr>
+    <tr>
+        <td>Helen</td>
+        <td>32</td>
+        <td>UK</td>
+    </tr>
+    <tr>
+        <td>Giovanni</td>
+        <td>37</td>
+        <td>Italy</td>
+    </tr>
+    </tbody>
+
+</table>
+
+<!--<div class="taskThree">-->
+
+<!--<div class="grandparent">-->
+<!--    <div class="parent">-->
+<!--        <div class="child"></div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<button type="submit" onclick="onClick()">Submit</button>-->
 <script src="script.js"></script>
 </body>
 </html>
