--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <body class="wrapper">
 <textarea class="area"></textarea>
 <div class="view"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper risus orci, et pretium
-    libero-->
-    interdum ut. Morbi placerat elit lacus, at ullamcorper mi sodales tempor. Cras gravida sollicitudin nulla
+    libero interdum ut. Morbi placerat elit lacus, at ullamcorper mi sodales tempor. Cras gravida sollicitudin nulla
     nec ultrices. Aliquam mollis est sed porttitor mattis. Suspendisse consequat pellentesque maximus. Morbi a
     diam neque. Vestibulum vitae tellus in ipsum lacinia lacinia eget non nulla. Maecenas mattis ante porta,
     pellentesque tellus non, imperdiet neque.
@@ -60,14 +59,14 @@
 
 </table>
 
-<!--<div class="taskThree">-->
+<div class="taskThree">
+    <div id="scalable-div" class="border">
+      <p class="text">some text</p>
+        <div id="circle" class="resize-circle"></div>
+    </div>
+</div>
 
-<!--<div class="grandparent">-->
-<!--    <div class="parent">-->
-<!--        <div class="child"></div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<button type="submit" onclick="onClick()">Submit</button>-->
+
 <script src="script.js"></script>
 </body>
 </html>
