--- a/classWork.html
+++ b/classWork.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="css/styles.css" rel="stylesheet">
-  <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link href="css/styles.css" rel="stylesheet">
+    <title>Document</title>
 </head>
 <body>
-<div class="progressBar">
-    <progress class="bar" value="0" max="100"></progress>
-    <button class="btn">Click</button>
+<!--<div class="progressBar">-->
+<!--    <progress class="bar" value="0" max="100"></progress>-->
+<!--    <button class="btn">Click</button>-->
+<!--</div>-->
+
+<div class="your-class ">
+    <div class="itemContent">content</div>
+    <div class="itemContent blue">content</div>
+    <div class="itemContent another">content</div>
+    <div class="itemContent">content</div>
+    <div class="itemContent blue">content</div>
+    <div class="itemContent another">content</div>
 </div>
 
-
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
 <script src="classWK.js"></script>
 </body>
 </html>
