--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="widgets/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="widgets/slick/slick-theme.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="widgets/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="widgets/owl/owl.theme.default.min.css">
@@ -59,6 +61,70 @@
         </div>
         <div class="swiper-pagination"></div>
     </section>
+
+<!--    <h2 class="title title-arrivals">new arrivals</h2>-->
+<!--    <div class="arrival">-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-1.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Hagstrom Alvar Limited Edition</p>-->
+<!--            <p class="arrival__content__price">€2.990,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-2.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Hagstrom Alvar Limited Edition</p>-->
+<!--            <p class="arrival__content__price">€1.300,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-3.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Gibson Les Paul Standard 60s</p>-->
+<!--            <p class="arrival__content__price">€3.749,00</p>-->
+<!--            <p class="arrival__content__status">Sold</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-4.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Suhr Standard Plus Trans Blue Denim</p>-->
+<!--            <p class="arrival__content__price">€3.449,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-5.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Fender Telecaster Black Paisley Limited Edition</p>-->
+<!--            <p class="arrival__content__price">€1.499,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-1.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Hagstrom Alvar Limited Edition</p>-->
+<!--            <p class="arrival__content__price">€2.990,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-2.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Hagstrom Tremar Viking Deluxe Cloudy Seas</p>-->
+<!--            <p class="arrival__content__price">€1.300,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-3.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Gibson Les Paul Standard 60s</p>-->
+<!--            <p class="arrival__content__price">€3.749,00</p>-->
+<!--            <p class="arrival__content__status">Sold</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-4.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Suhr Standard Plus Trans Blue Denim</p>-->
+<!--            <p class="arrival__content__price">€3.449,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--        <div class="arrival__content">-->
+<!--            <img class="arrival__content__img" src="assets/new-arrivals/guitar-5.png" alt="picture-guitar">-->
+<!--            <p class="arrival__content__text">Fender Telecaster Black Paisley Limited Edition</p>-->
+<!--            <p class="arrival__content__price">€1.499,00</p>-->
+<!--            <p class="arrival__content__status">in stock</p>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
     <div class="swiper new-arrivals mySwiper">
@@ -381,7 +447,6 @@
                   d="M5.52103 40.34C4.94735 39.6577 6.46996 41.1258 5.32557 39.9432C5.27661 39.7878 5.89529 40.2609 6.41922 40.8323C6.32426 40.8395 5.8495 40.3337 6.13634 40.7202C6.56135 41.0237 6.66027 41.2011 6.60972 40.999C7.2734 41.5601 7.3967 41.574 7.86472 41.9375C7.08647 41.2352 5.6027 39.6122 4.55941 38.7761C3.94608 38.3528 4.13579 38.7896 4 38.9197C4.04678 39.0283 5.38167 40.3773 5.52103 40.34ZM6.38215 41.455C6.668 41.7505 6.76275 41.8338 6.95325 42C6.95048 41.9071 6.62042 41.6867 6.38215 41.455ZM5.44808 33.5429C5.48495 33.4691 5.99044 32.9225 5.84395 33.0025L5.06569 33.8193C5.25698 33.6362 5.34659 33.5935 5.44808 33.5429V33.5429ZM4.72394 34.1773L5.06549 33.8193C4.97589 33.9047 4.86964 34.0146 4.72394 34.1773ZM5.49784 33.5169L5.44808 33.5429C5.44075 33.558 5.44689 33.56 5.49784 33.5169ZM18.3359 22.851C18.3613 22.8984 18.6969 22.5233 18.8654 22.3352C18.7165 22.4765 18.4996 22.667 18.3359 22.851ZM31.6493 9.40475L31.9943 9.12139C31.8652 9.21467 31.7994 9.26268 31.6493 9.40475ZM35.5148 3.60354C35.517 3.58728 35.5343 3.55847 35.5602 3.52183C35.5333 3.5573 35.5174 3.58493 35.5148 3.60354ZM35.5602 3.52163C35.7456 3.27825 36.4592 2.66646 36.6523 2.38389L36.636 2.42798L36.8454 2.194L36.9221 2.10817C36.9338 2.09485 36.9481 2.08015 36.9558 2.06976C36.9603 2.0618 36.9649 2.05389 36.9697 2.04605L37 2C36.9778 2.04252 36.8105 2.2036 36.6741 2.34038L36.2261 2.79129C35.929 3.09405 35.659 3.38015 35.5602 3.52163V3.52163Z"
                   fill="#202020"/>
         </svg>
-
         <svg class="swiper-button-next" width="40" height="72" viewBox="0 0 40 72" fill="none"
              xmlns="http://www.w3.org/2000/svg">
             <path class="fill"
@@ -482,6 +547,7 @@
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"
         integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
+<script type="text/javascript" src="widgets/slick/slick.min.js"></script>
 <script src="widgets/owl/owl.carousel.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="script.js"></script>
