--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!--    </div>-->
 
 
-    <div class="swiper new-arrivals mySwiper">
+    <div class="swiper new-arrivals">
         <h2 class="title">new arrivals</h2>
         <div class="swiper-wrapper list-arrival">
             <div class="swiper-slide list-arrival__item">
@@ -158,6 +158,60 @@
                 <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-5.png" alt="picture-guitar">
                 <p class="list-arrival__item__text">Fender Telecaster Black Paisley Limited Edition</p>
                 <p class="list-arrival__item__price">€1.499,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-1.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Hagstrom Alvar Limited Edition</p>
+                <p class="list-arrival__item__price">€2.990,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-2.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Hagstrom Tremar Viking Deluxe Cloudy Seas</p>
+                <p class="list-arrival__item__price">€1.300,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-3.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Gibson Les Paul Standard 60s</p>
+                <p class="list-arrival__item__price">€3.749,00</p>
+                <p class="list-arrival__item__status sold">Sold</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-4.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Suhr Standard Plus Trans Blue Denim</p>
+                <p class="list-arrival__item__price">€3.449,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-5.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Fender Telecaster Black Paisley Limited Edition</p>
+                <p class="list-arrival__item__price">€1.499,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-1.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Hagstrom Alvar Limited Edition</p>
+                <p class="list-arrival__item__price">€2.990,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-2.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Hagstrom Tremar Viking Deluxe Cloudy Seas</p>
+                <p class="list-arrival__item__price">€1.300,00</p>
+                <p class="list-arrival__item__status">in stock</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-3.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Gibson Les Paul Standard 60s</p>
+                <p class="list-arrival__item__price">€3.749,00</p>
+                <p class="list-arrival__item__status sold">Sold</p>
+            </div>
+            <div class="swiper-slide list-arrival__item">
+                <img class="list-arrival__item__img" src="assets/new-arrivals/guitar-4.png" alt="picture-guitar">
+                <p class="list-arrival__item__text">Suhr Standard Plus Trans Blue Denim</p>
+                <p class="list-arrival__item__price">€3.449,00</p>
                 <p class="list-arrival__item__status">in stock</p>
             </div>
         </div>
