--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<div class="movies"></div>
-<script src="infoForLesson.js"></script>
+<a href="./index.html">back</a>
+<p>POST</p>
+<script src="posts.js"></script>
 </body>
 </html>
