--- a/index.html
+++ b/index.html
@@ -5,10 +5,54 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
+<header class="header">
+    <form class="form">
+        <input type="text" placeholder="Example: Wonder Woman" id="search" class="search">
+        <button class="button">Search</button>
+    </form>
+</header>
+<div class="genres"></div>
+
+<div class="movie-container"></div>
+<div class="pagination">
+    <div class="page" id="prev">Previous Page</div>
+    <div class="current" id="current">1</div>
+    <div class="page" id="next">Next Page</div>
+</div>
+
+<!--<div class="post d-flex flex-wrap">-->
+<!--    <a href="#" class="card w-25">-->
+<!--        <div class="card-body">-->
+<!--            <h5 class="card-title">Card title</h5>-->
+<!--            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's-->
+<!--                content.</p>-->
+<!--        </div>-->
+<!--    </a>-->
+<!--    <a href="#" class="card w-25">-->
+<!--        <div class="card-body">-->
+<!--            <h5 class="card-title">Card title</h5>-->
+<!--            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's-->
+<!--                content.</p>-->
+<!--        </div>-->
+<!--    </a>-->
+<!--    <a href="#" class="card w-25">-->
+<!--        <div class="card-body">-->
+<!--            <h5 class="card-title">Card title</h5>-->
+<!--            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's-->
+<!--                content.</p>-->
+<!--        </div>-->
+<!--    </a>-->
+<!--</div>-->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 <script src="script.js"></script>
 </body>
 </html>
