--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Document</title>
 </head>
 <body>
+<div id="employee" class="employee"></div>
+<div id="contentFoMarker"></div>
+
 <script src="script.js"></script>
 </body>
 </html>
