--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Document</title>
 </head>
 <body>
+<main>
+    <input class="input" id="clockName" type="text" placeholder="Create name for clock">
+    <button id="createClock" class="button" type="button">Add new clock</button>
+</main>
+<div id="customClock" class="my-clock">
+    <!--<div class="showTime"></div>-->
+<!--    <div></div>-->
+</div>
+
+
+<!--<div class="clock"></div>-->
 <script src="script.js"></script>
 </body>
 </html>
