--- a/index.html
+++ b/index.html
@@ -9,6 +9,42 @@
     <title>Document</title>
 </head>
 <body>
+<header class="header">
+    <div class="logo"></div>
+    <h2 class="title">Blog name</h2>
+    <nav class="nav">
+        <ul class="list">
+            <li class="item"></li>
+            <li class="item"></li>
+            <li class="item"></li>
+            <li class="item"></li>
+            <li class="item"></li>
+        </ul>
+    </nav>
+</header>
+
+<div class="first-screen">
+    <h2 class="title">Full-width banner image</h2>
+</div>
+
+<main class="main">
+    <div class="blog">
+        <h2 class="title">Blog</h2>
+        <div class="blog-item"></div>
+        <div class="blog-item"></div>
+        <div class="blog-item"></div>
+        <div class="blog-item"></div>
+    </div>
+
+    <div class="news">
+        <h2 class="title">News</h2>
+        <div class="news-item"></div>
+        <div class="news-item"></div>
+        <div class="news-item"></div>
+    </div>
+</main>
+
+
 <script src="script.js"></script>
 </body>
 </html>
